--- a/brevets/website/templates/base.html
+++ b/brevets/website/templates/base.html
@@ -29,6 +29,12 @@
 						<a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
 						{% endif %}
 					</li>
+						<li class="nav-item">
+							{% if not current_user.is_authenticated %}
+							<a class="nav-link" href="{{ url_for('registration') }}">Register</a>
+							{% else %}
+							{% endif %}
+						</li>
 					<li class="nav-item">
 						{% if current_user.is_authenticated %}
 						<a class="nav-link" href="{{ url_for('selectdata') }}">Control Data</a>
